rounded blurb and resp ends

--- a/dad_hub/templates/blurbs.html
+++ b/dad_hub/templates/blurbs.html
@@ -75,7 +75,7 @@
 
 
                 <div class="row border blurb-response-row me-2">
-                    <div class="col w-75 border-0 blurb-col shadow-lg  rounded" style="background-color: #3B876E">
+                    <div class="col w-75 border-0 blurb-col shadow-lg  rounded-top" style="background-color: #3B876E">
 
                         <div class="card w-100 h-80 mt-2 mb-2 border-0" style="background-color: #3B876E">
                             {% if blurb.image != "" %}
@@ -124,7 +124,7 @@
 
 
 
-                    <div class="col-3 p-3 response-col w-100" style="max-width: 500px; background-color: #2F3052">
+                    <div class="col-3 p-3 rounded-bottom response-col w-100" style="max-width: 500px; background-color: #2F3052">
                         <div class="d-flex align-items-center justify-content-center">
                             <a class="btn shadow-lg btn-info m-3" data-toggle="collapse" href="#a{{blurb.id}}responses"
                                 role="button" aria-expanded="false" aria-controls="collapseExample">
