no progress. chatGPT doesn't know django.

--- a/dad_hub/templates/search_results.html
+++ b/dad_hub/templates/search_results.html
@@ -94,9 +94,11 @@
                                 <ul class="list-group border-0 list-group-flush">
                                     <li class="list-group-item border-0"><strong>Location:</strong><br> {{bio.state}}, {{bio.county}} county,
                                         {{bio.zip}}</li>
-                                    {% with bio_distance=bio_distances.bio.id %}
+                                    {% with bio_distance=bio_distances %}
                                         {% if bio_distance %}
-                                        <li> {{bio_distance}} mi away</li>
+                                        <li> {{ bio_distance }} mi away</li>
+                                        {% else %}
+                                        <li> Distance Unavailable</li>
                                         {% endif %}
                                     {% endwith %}
                                     <li class="list-group-item border-0"><strong>Kids' Ages:</strong> {% for age in bio.kids_ages%}{{age}},
